- Fix images not being the correct size when they should be
- Don't hide the chat if you are currently typing or hovering on the chat box